--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,3 +1,10 @@
+// AUTOMATICALLY GENERATED FILE. PLEASE DO NOT MODIFY IT MANUALLY
+//
+// PIO Unified Debugger
+//
+// Documentation: https://docs.platformio.org/page/plus/debugging.html
+// Configuration: https://docs.platformio.org/page/projectconf/section_env_debug.html
+
 {
     "version": "0.2.0",
     "configurations": [
@@ -30,7 +37,9 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/build/emulator.run",
-            "args": ["--headless"],
+            "args": [
+                "--headless"
+            ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}/build",
             "environment": [],
@@ -54,7 +63,9 @@
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/build/emulator.run",
-            "args": ["--unit_tests"],
+            "args": [
+                "--unit_tests"
+            ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}/build",
             "environment": [],
@@ -72,6 +83,38 @@
                     "ignoreFailures": true
                 }
             ]
+        },
+        {
+            "type": "platformio-debug",
+            "request": "launch",
+            "name": "PIO Debug",
+            "executable": "/home/hugo/Documentos/GitHub/open-smartwatch-os/.pio/build/LIGHT_EDITION_V3_3/firmware.elf",
+            "projectEnvName": "LIGHT_EDITION_V3_3",
+            "toolchainBinDir": "/home/hugo/.platformio/packages/toolchain-xtensa-esp32/bin",
+            "internalConsoleOptions": "openOnSessionStart",
+            "preLaunchTask": {
+                "type": "PlatformIO",
+                "task": "Pre-Debug"
+            }
+        },
+        {
+            "type": "platformio-debug",
+            "request": "launch",
+            "name": "PIO Debug (skip Pre-Debug)",
+            "executable": "/home/hugo/Documentos/GitHub/open-smartwatch-os/.pio/build/LIGHT_EDITION_V3_3/firmware.elf",
+            "projectEnvName": "LIGHT_EDITION_V3_3",
+            "toolchainBinDir": "/home/hugo/.platformio/packages/toolchain-xtensa-esp32/bin",
+            "internalConsoleOptions": "openOnSessionStart"
+        },
+        {
+            "type": "platformio-debug",
+            "request": "launch",
+            "name": "PIO Debug (without uploading)",
+            "executable": "/home/hugo/Documentos/GitHub/open-smartwatch-os/.pio/build/LIGHT_EDITION_V3_3/firmware.elf",
+            "projectEnvName": "LIGHT_EDITION_V3_3",
+            "toolchainBinDir": "/home/hugo/.platformio/packages/toolchain-xtensa-esp32/bin",
+            "internalConsoleOptions": "openOnSessionStart",
+            "loadMode": "manual"
         }
     ]
 }
