--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,6 +103,7 @@ target_compile_definitions(emulator.run PUBLIC
     OSW_FEATURE_STATS_STEPS
     GAME_SNAKE=1
     GAME_BRICK_BREAKER=1
+    GAME_SIMON=1
     TOOL_FLASHLIGHT=1
     TOOL_CALCULATOR=1
     TOOL_STOPWATCH=1
